--- a/mystyle.css
+++ b/mystyle.css
@@ -79,9 +79,10 @@ body {
       }
       .journey {
   
-    font-size: 25px;
+    font-size: 30px;
     display: block;
     text-align: justify;
+    
     
     color: black;
     position: absolute;
@@ -102,12 +103,21 @@ body {
   a:hover circle { fill: transparent; stroke: black; stroke-width: 1px; filter: blur(20px); } a:hover text { fill: black;}
 
   .text {
-    font-size: 100px;
+    font-size: 120px;
     display: block;
     text-align: left;
     padding-top: 50%;
     color: black;
     position: absolute;
+  }
+  span {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 120px;
+    display: block;
+    text-align: right;
+    padding-top: 50%;
+    color: black;
+    
   }
          
       
