--- a/mystyle.css
+++ b/mystyle.css
@@ -4,6 +4,7 @@ body {
     
 }
 .wrapper {
+  width: 100%;
   padding: 0px 10px 20px;
   font-size: 90px;
   font-family: Arial, Helvetica, sans-serif;
@@ -93,6 +94,57 @@ body {
     
     color: black;
     
+  }
+
+  @media only screen and (min-width:768px) {
+
+    .wrapper {
+      width: 600px;
+      font-size: 120px;
+      padding: 0px 20px 0px;
+  
+      
+    }
+    span {
+      width: 100%;
+      padding: 750px 0px 20px;
+      
+      font-size: 120px;
+      display: block;
+      text-align: right;
+      line-height: 80px;
+      
+      color: black;
+      
+    }
+
+
+  }
+
+  @media only screen and (min-width:1000px) {
+
+    .wrapper {
+      width: 1000px;
+      font-size: 180px;
+      padding: 0px 20px 0px;
+  
+      
+    }
+    span {
+      width: 100%;
+      padding: 800px 0px 20px;
+      
+      
+      font-size: 180px;
+      display: block;
+      text-align: right;
+      line-height: 170px;
+      
+      color: black;
+      
+    }
+
+
   }
          
       
