--- a/mystyle.css
+++ b/mystyle.css
@@ -11,37 +11,8 @@ body {
   line-height: normal;
 }
 
-.path2 {
-    stroke-dasharray: 4000;
-  /*   stroke-dashoffset: 800; */
-    animation: draw1 2s linear alternate;
-  }
-  
-  @keyframes draw1 {
-    from {
-      stroke-dashoffset: 4000;
-    }
-    to {
-      stroke-dashoffset: 4000;
-    }
-  }
-  h1 {
-    font-size: 20vw;
-}
 
-
-
-@keyframes marquee {
-    0%   { transform: translate(0%, 0); }
-    100% { transform: translate(-141.5vw, 0); }
-}
-
-
-
-   
-  
-          
-          a {
+a {
          
           text-decoration: none;
           vertical-align: middle;
@@ -54,18 +25,18 @@ body {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-              
-              position: absolute;
+            position: absolute;
   
           }
      
       .journey {
-        width: 100%;
+        
         padding: 0px 20px 20px;
         font-size: 20px;
         font-family: Arial, Helvetica, sans-serif;
         display: block;
         color: black;
+        text-align: justify;
     
   
     
@@ -77,7 +48,7 @@ body {
   
   
   .hidden {
-    width: 100%;
+    
     display: none;
   }
   a:hover circle { fill: transparent; stroke: black; stroke-width: 1px; filter: blur(20px); } a:hover text { fill: black;}
@@ -95,6 +66,78 @@ body {
     color: black;
     
   }
+  @media only screen and (min-width:320px) {
+
+    .wrapper {
+      width: 320px;
+      font-size: 80px;
+      padding: 0px 20px 0px;
+  
+      
+    }
+    span {
+      width: 320px;
+      padding: 400px 0px 20px;
+      
+      font-size: 80px;
+      display: block;
+      text-align: right;
+      line-height: 80px;
+      
+      color: black;
+      
+    }
+    .journey {
+      width: 320px; 
+      margin: 0 auto; 
+      padding: 5px 10px 20px;
+      font-size: 30px;
+      font-family: Arial, Helvetica, sans-serif;
+      display: block;
+      color: black;
+      text-align: justify;
+    }
+      .hidden {
+    
+        display: none;
+      }
+    }
+  @media only screen and (min-width:375px) {
+
+    .wrapper {
+      width: 350px;
+      font-size: 90px;
+      padding: 0px 20px 0px;
+  
+      
+    }
+    span {
+      width: 350px;
+      padding: 520px 0px 20px;
+      
+      font-size: 90px;
+      display: block;
+      text-align: right;
+      line-height: 80px;
+      
+      color: black;
+      
+    }
+    .journey {
+      width: 350px; 
+      margin: 0 auto; 
+      padding: 5px 10px 20px;
+      font-size: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      display: block;
+      color: black;
+      text-align: justify;
+    }
+      .hidden {
+    
+        display: none;
+      }
+    }
 
   @media only screen and (min-width:768px) {
 
@@ -106,22 +149,34 @@ body {
       
     }
     span {
-      width: 100%;
-      padding: 750px 0px 20px;
+      width: 600px;
+      padding: 600px 0px 20px;
       
       font-size: 120px;
       display: block;
       text-align: right;
-      line-height: 80px;
+      line-height: 110px;
       
       color: black;
       
     }
-
-
   }
+    .journey {
+      width: 600px;  
+      padding: 5px 10px 20px;
+      font-size: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      display: block;
+      color: black;
+      text-align: justify;
+    }
+      .hidden {
+    
+        display: none;
+      }
 
-  @media only screen and (min-width:1000px) {
+
+  @media only screen and (min-width:1024px) {
 
     .wrapper {
       width: 1000px;
@@ -131,8 +186,8 @@ body {
       
     }
     span {
-      width: 100%;
-      padding: 800px 0px 20px;
+      width: 1000px;
+      padding: 1000px 0px 20px;
       
       
       font-size: 180px;
@@ -183,4 +238,5 @@ body {
     width: 1200px;
     display: none;
          
-      
+  }  
+}
