--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding:0px;
+  box-sizing: border-box;
+}
 body {
     transition: all 1s;
     
@@ -30,7 +35,7 @@ a {
           }
      
       .journey {
-        
+        width: 100%;
         padding: 0px 20px 20px;
         font-size: 20px;
         font-family: Arial, Helvetica, sans-serif;
@@ -71,18 +76,18 @@ a {
     .wrapper {
       width: 300px;
       font-size: 60px;
-      padding: 0px 0px 0px;
+      padding: 0px 10px 0px;
   
       
     }
     span {
       width: 300px;
-      padding: 320px 10px 20px 0px;
+      padding: 360px 0px 20px 0px;
       
       font-size: 60px;
       display: block;
       text-align: right;
-      line-height: 70px;
+      line-height: 60px;
       
       color: black;
       
@@ -105,14 +110,14 @@ a {
   @media only screen and (min-width:375px) {
 
     .wrapper {
-      width: 375px;
+      width: 360px;
       font-size: 70px;
       padding: 0px 10px 0px;
   
       
     }
     span {
-      width: 375px;
+      width: 360px;
       padding: 570px 0px 0px;
       
       font-size: 70px;
@@ -124,7 +129,7 @@ a {
       
     }
     .journey {
-      width: 350px; 
+      width: 370px; 
       margin: 0 auto; 
       padding: 5px 10px 20px;
       font-size: 20px;
@@ -149,8 +154,8 @@ a {
       
     }
     span {
-      width: 700px;
-      padding: 600px 0px 20px;
+      width: 750px;
+      padding: 650px 0px 20px;
       
       font-size: 120px;
       display: block;
@@ -225,7 +230,7 @@ a {
       
     }
     span {
-      width: 1280px;
+      width: 1250px;
       padding: 450px 0px 20px;
       
       
@@ -238,7 +243,7 @@ a {
       
     }
     .journey {
-      width: 1200px;
+      width: 1250px;
       padding: 0px 20px 20px;
       font-size: 30px;
       font-family: Arial, Helvetica, sans-serif;
