--- a/mystyle.css
+++ b/mystyle.css
@@ -75,16 +75,16 @@ a {
 
     .wrapper {
       width: 300px;
-      font-size: 60px;
+      font-size: 50px;
       padding: 0px 10px 0px;
   
       
     }
     span {
       width: 300px;
-      padding: 430px 0px 20px 0px;
+      padding: 400px 0px 20px 0px;
       
-      font-size: 60px;
+      font-size: 50px;
       display: block;
       text-align: right;
       line-height: 50px;
@@ -118,7 +118,7 @@ a {
     }
     span {
       width: 360px;
-      padding: 650px 0px 0px;
+      padding: 590px 0px 0px;
       
       font-size: 70px;
       display: block;
@@ -143,6 +143,42 @@ a {
         display: none;
       }
     }
+    @media only screen and (min-width:414px) {
+
+      .wrapper {
+        width: 400px;
+        font-size: 70px;
+        padding: 0px 10px 0px;
+    
+        
+      }
+      span {
+        width: 400px;
+        padding: 520px 0px 0px;
+        
+        font-size: 70px;
+        display: block;
+        text-align: right;
+        line-height: 60px;
+        
+        color: black;
+        
+      }
+      .journey {
+        width: 400px; 
+        margin: 0 auto; 
+        padding: 5px 10px 20px;
+        font-size: 20px;
+        font-family: Arial, Helvetica, sans-serif;
+        display: block;
+        color: black;
+        text-align: justify;
+      }
+        .hidden {
+      
+          display: none;
+        }
+      }
 
   @media only screen and (min-width:768px) {
 
@@ -155,7 +191,7 @@ a {
     }
     span {
       width: 750px;
-      padding: 720px 0px 20px;
+      padding: 600px 0px 20px;
       
       font-size: 130px;
       display: block;
@@ -193,7 +229,7 @@ a {
     }
     span {
       width: 980px;
-      padding: 980px 0px 20px 0px;
+      padding: 830px 0px 20px 0px;
       
       
       font-size: 160px;
