--- a/mystyle.css
+++ b/mystyle.css
@@ -5,15 +5,15 @@ div {
     -webkit-transform: translate(-50%, -50%);
      -moz-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    position:absolute;
+    position:fixed;
     
   
   
 }
 button {
  top:50%;   
-height: 100px;
-width: 100px;
+height: 150px;
+width: 150px;
 
 }
 .play {
