--- a/mystyle.css
+++ b/mystyle.css
@@ -47,7 +47,7 @@ ul {
             color: black;
             text-decoration:none;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 50px;
+            font-size: 5vw;
         }
         #playlist .current-song a{
            color: black;
