--- a/mystyle.css
+++ b/mystyle.css
@@ -31,6 +31,11 @@ ul {
     -webkit-columns: 2;
     -moz-columns: 2;
   }
+  ul {
+    -webkit-columns: 2 300px;
+    -moz-columns: 2 300px;
+         columns: 2 300px;
+  }
 #audioPlayer{
 	width: 600px;
 	height: 60px;
