--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 div {
-    width: 100%;
+   
     background-color: blue;
     position: relative;
     
@@ -13,8 +13,10 @@ div {
 }
 button {
  top:50%;   
-height: 20vw;
-width: 20vw;
+height: 15vw;
+width: 15vw;
+
+
 
 
 }
@@ -23,12 +25,16 @@ width: 20vw;
     border-radius: 50%;
     border-color: transparent;
     font-size: 100px;
+    float: left;
+    
     
 }
 .pause {
     background-color:yellow;
     border-color: transparent;
     font-size: 100px;
+    border-radius: 30px;
+    float: left;
 }
 ul {
     columns: 2;
@@ -37,8 +43,8 @@ ul {
   }
   ul {
     -webkit-columns: 2 200px;
-    -moz-columns: 2 200px;
-         columns: 2 200px;
+    -moz-columns: 2 300px;
+         columns: 2 300px;
   }
 #audioPlayer{
 	width: 600px;
@@ -56,7 +62,7 @@ ul {
             color: black;
             text-decoration:none;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 7vw;
+            font-size: 5vw;
             
         }
         #playlist .current-song a{
