--- a/mystyle.css
+++ b/mystyle.css
@@ -21,6 +21,13 @@ width: 15vw;
 
 
 }
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3vw;
+    position: static;
+    padding-left: 5px;
+    
+}
 .play {
     background-color: rgb(255, 0, 234);
     border-radius: 50%;
